# gymtorax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  code-quality.yml  publish.yml
docs/: About GymTorax.rst  Agents.rst  Citing.rst  Config example.rst  Developer guide.rst  Environment Design.rst  Environment Designers.rst  Examples.rst  Installation.rst  Iter env.rst  Makefile  Other Modules.rst  Physical validation.rst  RL Users.rst  RL users.rst  Results.rst  Simple control.rst  TORAX Wrapper.rst  User guide.rst  about_gymtorax.rst  citing.rst  conf.py  index.rst  installation.rst  requirement.txt
docs/_static/: custom.css
docs/developer_guide/: environment_design.rst  index.rst  other_modules.rst  torax_wrapper.rst
docs/example/: agents.rst  config_example.rst  index.rst  iter_env.rst  policies.rst  results.rst
docs/examples/: agents.rst  config_example.rst  index.rst  iter_env.rst  results.rst
docs/user_guide/: environment_designers.rst  index.rst  rl_users.rst
examples/: all_bounds.json  basic_env.py  iter_hybrid.json  iter_hybrid.py  iter_hybrid_pid.py  iter_hybrid_random.py  iter_hyprid  iter_hyprid.py  pid_optimization.py  test_env.py
gymtorax/: __init__.py  action_handler.py  default_bounds.json  logger.py  observation_handler.py  render.py  rendering.py  rewards.py  state.py  utils.py
gymtorax/agents/: __init__.py  base_agent.py  (+1 more)
tests/: test_action_handler.py  test_config_loader.py  test_docs.py  test_env_checker.py  test_environment_registration.py  test_torax_app.py
(+18 files in other folders)
