[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gymtorax"
version = "0.1.0"
description = "A Gymnasium environment for Torax simulations"
authors = [
    { name = "Antoine Mouchamps", email = "antoine.mouchamps@gmail.com" },
    { name = "Arthur Malherbe", email = "arthur.m222004@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "torax",
]

[tool.setuptools]
packages = ["gymtorax"]
